--- a/ANALISIS/CLASIFICACION/clasificadores.ipynb
+++ b/ANALISIS/CLASIFICACION/clasificadores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "5   L47184       No Failure  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -513,49 +513,49 @@
        "      <th>0</th>\n",
        "      <td>RandomForestClassifier</td>\n",
        "      <td>98.633</td>\n",
-       "      <td>0.661124</td>\n",
+       "      <td>0.682060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>GradientBoostingClassifier</td>\n",
-       "      <td>98.567</td>\n",
-       "      <td>0.657201</td>\n",
+       "      <td>BaggingClassifier</td>\n",
+       "      <td>98.600</td>\n",
+       "      <td>0.131435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>StackingClassifier</td>\n",
        "      <td>98.567</td>\n",
-       "      <td>1.748083</td>\n",
+       "      <td>1.774647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BaggingClassifier</td>\n",
+       "      <td>GradientBoostingClassifier</td>\n",
        "      <td>98.533</td>\n",
-       "      <td>0.199664</td>\n",
+       "      <td>0.641732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AdaBoostClassifier</td>\n",
-       "      <td>97.433</td>\n",
-       "      <td>0.242290</td>\n",
+       "      <td>MLPClassifier</td>\n",
+       "      <td>97.833</td>\n",
+       "      <td>0.909242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>LogisticRegression</td>\n",
-       "      <td>97.367</td>\n",
-       "      <td>0.081269</td>\n",
+       "      <td>AdaBoostClassifier</td>\n",
+       "      <td>97.433</td>\n",
+       "      <td>0.245411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>MLPClassifier</td>\n",
-       "      <td>97.333</td>\n",
-       "      <td>1.155732</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>97.367</td>\n",
+       "      <td>0.062206</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
        "      <td>95.933</td>\n",
-       "      <td>0.144476</td>\n",
+       "      <td>0.119396</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -563,17 +563,17 @@
       ],
       "text/plain": [
        "                       Models  Accuracy  Runtime (s)\n",
-       "0      RandomForestClassifier    98.633     0.661124\n",
-       "1  GradientBoostingClassifier    98.567     0.657201\n",
-       "2          StackingClassifier    98.567     1.748083\n",
-       "3           BaggingClassifier    98.533     0.199664\n",
-       "4          AdaBoostClassifier    97.433     0.242290\n",
-       "5          LogisticRegression    97.367     0.081269\n",
-       "6               MLPClassifier    97.333     1.155732\n",
-       "7        KNeighborsClassifier    95.933     0.144476"
+       "0      RandomForestClassifier    98.633     0.682060\n",
+       "1           BaggingClassifier    98.600     0.131435\n",
+       "2          StackingClassifier    98.567     1.774647\n",
+       "3  GradientBoostingClassifier    98.533     0.641732\n",
+       "4               MLPClassifier    97.833     0.909242\n",
+       "5          AdaBoostClassifier    97.433     0.245411\n",
+       "6          LogisticRegression    97.367     0.062206\n",
+       "7        KNeighborsClassifier    95.933     0.119396"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,22 +584,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BestModel is: RandomForestClassifier\n",
-      "Accuracy of model: 98.63300000000001\n",
-      "Training Runtime in seconds 0.661\n",
-      "Classification Matrix:\n",
+      "Mejor Modelo: RandomForestClassifier\n",
+      "Accuracy del modelo: 98.63300000000001\n",
+      "Runtime 0.682\n",
+      "Matriz de clasificacion:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.99      1.00      0.99      2907\n",
-      "           1       0.88      0.65      0.75        93\n",
+      "           1       0.89      0.63      0.74        93\n",
       "\n",
       "    accuracy                           0.99      3000\n",
       "   macro avg       0.94      0.82      0.87      3000\n",
@@ -609,10 +609,10 @@
     }
    ],
    "source": [
-    "print('BestModel is:',  classification.best_model(type='name'))\n",
-    "print('Accuracy of model:',classification.best_model_accuracy())\n",
-    "print('Training Runtime in seconds',classification.best_model_runtime())\n",
-    "print('Classification Matrix:\\n')\n",
+    "print('Mejor Modelo:',  classification.best_model(type='name'))\n",
+    "print('Accuracy del modelo:',classification.best_model_accuracy())\n",
+    "print('Runtime',classification.best_model_runtime())\n",
+    "print('Matriz de clasificacion:\\n')\n",
     "print(classification.best_model_clmatrix())"
    ]
   }
