--- a/ANALISIS/hypertuninga/hyper_implementacion.ipynb
+++ b/ANALISIS/hypertuninga/hyper_implementacion.ipynb
@@ -1979,14 +1979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exactitud: 0.904\n"
+      "Exactitud: 0.9416\n"
      ]
     }
    ],
@@ -2004,20 +2004,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score TEST del classificador macro: 0.3372118971543608\n",
-      "F1 Score TEST del classificador micro: 0.9475394371364184\n",
-      "F1 Score TEST del classificador weighted: 0.9373770269468119\n",
-      "F1 Score TEST del classificador: [0.         0.96185169 0.63865546 0.42276423 0.         0.        ]\n",
-      "Jaccard Score TEST del classificador macro: 0.27728067642918436\n",
-      "Jaccard Score TEST del classificador micro: 0.9003087341898217\n",
-      "Jaccard Score TEST del classificador weighted: 0.9004702257434634\n"
+      "F1 Score TEST del classificador macro: 0.712428627833864\n",
+      "F1 Score TEST del classificador micro: 0.9612086565945285\n",
+      "F1 Score TEST del classificador weighted: 0.962549392275697\n",
+      "F1 Score TEST del classificador: [0.70860927 0.97073534 0.78723404 0.87292818 0.36363636 0.57142857]\n",
+      "Jaccard Score TEST del classificador macro: 0.5896179340077273\n",
+      "Jaccard Score TEST del classificador micro: 0.925314465408805\n",
+      "Jaccard Score TEST del classificador weighted: 0.9310803724132986\n"
      ]
     }
    ],
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2054,10 +2054,10 @@
     {
      "data": {
       "text/plain": [
-       "'              precision    recall  f1-score   support\\n\\n           0       0.56      1.00      0.72       112\\n           1       1.00      0.97      0.99      9652\\n           2       0.96      1.00      0.98        78\\n           3       1.00      0.99      0.99        95\\n           4       1.00      0.33      0.50        18\\n           5       0.30      1.00      0.46        45\\n\\n   micro avg       0.98      0.97      0.98     10000\\n   macro avg       0.80      0.88      0.77     10000\\nweighted avg       0.99      0.97      0.98     10000\\n samples avg       0.97      0.97      0.97     10000\\n'"
+       "'              precision    recall  f1-score   support\\n\\n           0       0.56      0.96      0.71       112\\n           1       1.00      0.95      0.97      9652\\n           2       0.67      0.95      0.79        78\\n           3       0.92      0.83      0.87        95\\n           4       1.00      0.22      0.36        18\\n           5       0.50      0.67      0.57        45\\n\\n   micro avg       0.98      0.94      0.96     10000\\n   macro avg       0.78      0.76      0.71     10000\\nweighted avg       0.99      0.94      0.96     10000\\n samples avg       0.94      0.94      0.94     10000\\n'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
