--- a/ANALISIS/hypertuninga/hyper_implementacion.ipynb
+++ b/ANALISIS/hypertuninga/hyper_implementacion.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "             verbose=1)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
      "output_type": "stream",
      "text": [
       "Mejores parametros: {'criterion': 'entropy', 'max_depth': 8, 'max_features': 'log2', 'n_estimators': 55}\n",
-      "Mejor Score: 0.6425015399699342\n",
+      "Mejor Score: 0.6433906586413565\n",
       "\n"
      ]
     },
@@ -441,122 +441,122 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.629412</td>\n",
-       "      <td>0.342139</td>\n",
-       "      <td>0.145282</td>\n",
-       "      <td>0.034057</td>\n",
+       "      <td>1.448033</td>\n",
+       "      <td>0.354284</td>\n",
+       "      <td>0.144788</td>\n",
+       "      <td>0.041027</td>\n",
        "      <td>entropy</td>\n",
        "      <td>6</td>\n",
        "      <td>sqrt</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 6, 'max_...</td>\n",
-       "      <td>0.911975</td>\n",
-       "      <td>0.296827</td>\n",
-       "      <td>0.862457</td>\n",
-       "      <td>0.445392</td>\n",
-       "      <td>0.114334</td>\n",
-       "      <td>0.526197</td>\n",
-       "      <td>0.313262</td>\n",
+       "      <td>0.909928</td>\n",
+       "      <td>0.311839</td>\n",
+       "      <td>0.869966</td>\n",
+       "      <td>0.404437</td>\n",
+       "      <td>0.112287</td>\n",
+       "      <td>0.521691</td>\n",
+       "      <td>0.315411</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.838662</td>\n",
-       "      <td>0.312880</td>\n",
-       "      <td>0.140685</td>\n",
-       "      <td>0.037719</td>\n",
+       "      <td>2.226008</td>\n",
+       "      <td>0.574026</td>\n",
+       "      <td>0.140525</td>\n",
+       "      <td>0.031025</td>\n",
        "      <td>entropy</td>\n",
        "      <td>6</td>\n",
        "      <td>log2</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 6, 'max_...</td>\n",
-       "      <td>0.913340</td>\n",
-       "      <td>0.304333</td>\n",
-       "      <td>0.912287</td>\n",
-       "      <td>0.539932</td>\n",
-       "      <td>0.134812</td>\n",
-       "      <td>0.560941</td>\n",
-       "      <td>0.314803</td>\n",
+       "      <td>0.902764</td>\n",
+       "      <td>0.301262</td>\n",
+       "      <td>0.897952</td>\n",
+       "      <td>0.506826</td>\n",
+       "      <td>0.125597</td>\n",
+       "      <td>0.546880</td>\n",
+       "      <td>0.312831</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.556472</td>\n",
-       "      <td>0.280067</td>\n",
-       "      <td>0.150014</td>\n",
-       "      <td>0.035506</td>\n",
+       "      <td>1.708331</td>\n",
+       "      <td>0.316253</td>\n",
+       "      <td>0.134487</td>\n",
+       "      <td>0.037163</td>\n",
        "      <td>entropy</td>\n",
        "      <td>7</td>\n",
        "      <td>sqrt</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 7, 'max_...</td>\n",
-       "      <td>0.919823</td>\n",
-       "      <td>0.413170</td>\n",
-       "      <td>0.894198</td>\n",
-       "      <td>0.520137</td>\n",
-       "      <td>0.132765</td>\n",
-       "      <td>0.576018</td>\n",
-       "      <td>0.298515</td>\n",
+       "      <td>0.926305</td>\n",
+       "      <td>0.324804</td>\n",
+       "      <td>0.871331</td>\n",
+       "      <td>0.464505</td>\n",
+       "      <td>0.149829</td>\n",
+       "      <td>0.547355</td>\n",
+       "      <td>0.304297</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.860820</td>\n",
-       "      <td>0.233214</td>\n",
-       "      <td>0.140278</td>\n",
-       "      <td>0.028431</td>\n",
+       "      <td>2.015467</td>\n",
+       "      <td>0.292028</td>\n",
+       "      <td>0.142776</td>\n",
+       "      <td>0.037437</td>\n",
        "      <td>entropy</td>\n",
        "      <td>7</td>\n",
        "      <td>log2</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 7, 'max_...</td>\n",
-       "      <td>0.926987</td>\n",
-       "      <td>0.348004</td>\n",
-       "      <td>0.928328</td>\n",
-       "      <td>0.593515</td>\n",
-       "      <td>0.236860</td>\n",
-       "      <td>0.606739</td>\n",
-       "      <td>0.286324</td>\n",
+       "      <td>0.908905</td>\n",
+       "      <td>0.363357</td>\n",
+       "      <td>0.928669</td>\n",
+       "      <td>0.607167</td>\n",
+       "      <td>0.233447</td>\n",
+       "      <td>0.608309</td>\n",
+       "      <td>0.280540</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.634191</td>\n",
-       "      <td>0.129874</td>\n",
-       "      <td>0.111569</td>\n",
-       "      <td>0.011844</td>\n",
+       "      <td>1.795158</td>\n",
+       "      <td>0.337726</td>\n",
+       "      <td>0.112513</td>\n",
+       "      <td>0.008443</td>\n",
        "      <td>entropy</td>\n",
        "      <td>8</td>\n",
        "      <td>sqrt</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 8, 'max_...</td>\n",
-       "      <td>0.934493</td>\n",
-       "      <td>0.346639</td>\n",
-       "      <td>0.879522</td>\n",
-       "      <td>0.616724</td>\n",
-       "      <td>0.222867</td>\n",
-       "      <td>0.600049</td>\n",
-       "      <td>0.281680</td>\n",
+       "      <td>0.935176</td>\n",
+       "      <td>0.381440</td>\n",
+       "      <td>0.868259</td>\n",
+       "      <td>0.608191</td>\n",
+       "      <td>0.232082</td>\n",
+       "      <td>0.605030</td>\n",
+       "      <td>0.271064</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.602764</td>\n",
-       "      <td>0.054997</td>\n",
-       "      <td>0.090358</td>\n",
-       "      <td>0.011880</td>\n",
+       "      <td>1.958076</td>\n",
+       "      <td>0.308262</td>\n",
+       "      <td>0.099031</td>\n",
+       "      <td>0.018186</td>\n",
        "      <td>entropy</td>\n",
        "      <td>8</td>\n",
        "      <td>log2</td>\n",
        "      <td>55</td>\n",
        "      <td>{'criterion': 'entropy', 'max_depth': 8, 'max_...</td>\n",
-       "      <td>0.934152</td>\n",
-       "      <td>0.418287</td>\n",
-       "      <td>0.912628</td>\n",
-       "      <td>0.641638</td>\n",
-       "      <td>0.305802</td>\n",
-       "      <td>0.642502</td>\n",
-       "      <td>0.253641</td>\n",
+       "      <td>0.926987</td>\n",
+       "      <td>0.399864</td>\n",
+       "      <td>0.891809</td>\n",
+       "      <td>0.663481</td>\n",
+       "      <td>0.334812</td>\n",
+       "      <td>0.643391</td>\n",
+       "      <td>0.243749</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -565,12 +565,12 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0       1.629412      0.342139         0.145282        0.034057   \n",
-       "1       1.838662      0.312880         0.140685        0.037719   \n",
-       "2       1.556472      0.280067         0.150014        0.035506   \n",
-       "3       1.860820      0.233214         0.140278        0.028431   \n",
-       "4       1.634191      0.129874         0.111569        0.011844   \n",
-       "5       1.602764      0.054997         0.090358        0.011880   \n",
+       "0       1.448033      0.354284         0.144788        0.041027   \n",
+       "1       2.226008      0.574026         0.140525        0.031025   \n",
+       "2       1.708331      0.316253         0.134487        0.037163   \n",
+       "3       2.015467      0.292028         0.142776        0.037437   \n",
+       "4       1.795158      0.337726         0.112513        0.008443   \n",
+       "5       1.958076      0.308262         0.099031        0.018186   \n",
        "\n",
        "  param_criterion param_max_depth param_max_features param_n_estimators  \\\n",
        "0         entropy               6               sqrt                 55   \n",
@@ -581,31 +581,31 @@
        "5         entropy               8               log2                 55   \n",
        "\n",
        "                                              params  split0_test_score  \\\n",
-       "0  {'criterion': 'entropy', 'max_depth': 6, 'max_...           0.911975   \n",
-       "1  {'criterion': 'entropy', 'max_depth': 6, 'max_...           0.913340   \n",
-       "2  {'criterion': 'entropy', 'max_depth': 7, 'max_...           0.919823   \n",
-       "3  {'criterion': 'entropy', 'max_depth': 7, 'max_...           0.926987   \n",
-       "4  {'criterion': 'entropy', 'max_depth': 8, 'max_...           0.934493   \n",
-       "5  {'criterion': 'entropy', 'max_depth': 8, 'max_...           0.934152   \n",
+       "0  {'criterion': 'entropy', 'max_depth': 6, 'max_...           0.909928   \n",
+       "1  {'criterion': 'entropy', 'max_depth': 6, 'max_...           0.902764   \n",
+       "2  {'criterion': 'entropy', 'max_depth': 7, 'max_...           0.926305   \n",
+       "3  {'criterion': 'entropy', 'max_depth': 7, 'max_...           0.908905   \n",
+       "4  {'criterion': 'entropy', 'max_depth': 8, 'max_...           0.935176   \n",
+       "5  {'criterion': 'entropy', 'max_depth': 8, 'max_...           0.926987   \n",
        "\n",
        "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
-       "0           0.296827           0.862457           0.445392           0.114334   \n",
-       "1           0.304333           0.912287           0.539932           0.134812   \n",
-       "2           0.413170           0.894198           0.520137           0.132765   \n",
-       "3           0.348004           0.928328           0.593515           0.236860   \n",
-       "4           0.346639           0.879522           0.616724           0.222867   \n",
-       "5           0.418287           0.912628           0.641638           0.305802   \n",
+       "0           0.311839           0.869966           0.404437           0.112287   \n",
+       "1           0.301262           0.897952           0.506826           0.125597   \n",
+       "2           0.324804           0.871331           0.464505           0.149829   \n",
+       "3           0.363357           0.928669           0.607167           0.233447   \n",
+       "4           0.381440           0.868259           0.608191           0.232082   \n",
+       "5           0.399864           0.891809           0.663481           0.334812   \n",
        "\n",
        "   mean_test_score  std_test_score  rank_test_score  \n",
-       "0         0.526197        0.313262                6  \n",
-       "1         0.560941        0.314803                5  \n",
-       "2         0.576018        0.298515                4  \n",
-       "3         0.606739        0.286324                2  \n",
-       "4         0.600049        0.281680                3  \n",
-       "5         0.642502        0.253641                1  "
+       "0         0.521691        0.315411                6  \n",
+       "1         0.546880        0.312831                5  \n",
+       "2         0.547355        0.304297                4  \n",
+       "3         0.608309        0.280540                2  \n",
+       "4         0.605030        0.271064                3  \n",
+       "5         0.643391        0.243749                1  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,14 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exactitud: 0.9709\n"
+      "Exactitud: 0.9668\n"
      ]
     }
    ],
@@ -646,20 +646,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score TEST del classificador macro: 0.7719447306307415\n",
-      "F1 Score TEST del classificador micro: 0.9753867791842475\n",
-      "F1 Score TEST del classificador weighted: 0.9783350071890238\n",
-      "F1 Score TEST del classificador: [0.72025723 0.98471398 0.91764706 0.9947644  0.5        0.51428571]\n",
-      "Jaccard Score TEST del classificador macro: 0.6749331525269843\n",
-      "Jaccard Score TEST del classificador micro: 0.9519560741249142\n",
-      "Jaccard Score TEST del classificador weighted: 0.9606114291465198\n"
+      "F1 Score TEST del classificador macro: 0.7525137279350389\n",
+      "F1 Score TEST del classificador micro: 0.9705365657782461\n",
+      "F1 Score TEST del classificador weighted: 0.9758326359514438\n",
+      "F1 Score TEST del classificador: [0.72258065 0.98257436 0.92857143 1.         0.5        0.38135593]\n",
+      "Jaccard Score TEST del classificador macro: 0.661167381258212\n",
+      "Jaccard Score TEST del classificador micro: 0.9427596294490492\n",
+      "Jaccard Score TEST del classificador weighted: 0.9563932427690203\n"
      ]
     }
    ],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -696,10 +696,10 @@
     {
      "data": {
       "text/plain": [
-       "'              precision    recall  f1-score   support\\n\\n           0       0.56      0.96      0.71       112\\n           1       1.00      0.95      0.97      9652\\n           2       0.67      0.95      0.79        78\\n           3       0.92      0.83      0.87        95\\n           4       1.00      0.22      0.36        18\\n           5       0.50      0.67      0.57        45\\n\\n   micro avg       0.98      0.94      0.96     10000\\n   macro avg       0.78      0.76      0.71     10000\\nweighted avg       0.99      0.94      0.96     10000\\n samples avg       0.94      0.94      0.94     10000\\n'"
+       "'              precision    recall  f1-score   support\\n\\n           0       0.57      1.00      0.72       112\\n           1       1.00      0.97      0.98      9652\\n           2       0.87      1.00      0.93        78\\n           3       1.00      1.00      1.00        95\\n           4       1.00      0.33      0.50        18\\n           5       0.24      1.00      0.38        45\\n\\n   micro avg       0.97      0.97      0.97     10000\\n   macro avg       0.78      0.88      0.75     10000\\nweighted avg       0.99      0.97      0.98     10000\\n samples avg       0.97      0.97      0.97     10000\\n'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
